--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "seed:csv": "ts-node --transpile-only scripts/resetFromCsv.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
